
2003-07-12 Version 1.31 Beta 10Jul03
- Manual updates.
- Clean up some unused variables detected by the IRIX compiler.
- Test two directories on Win32 -- caused a crash. I forgot
  to NULL the uid cache pointer after releasing it.
- Use bstrncpy() instead of strcpy() in find_files.
- Clear a few linked lists in the temp directory packed in find_one.c
- Eliminate an unnecessary variable in attr.c
- Clear the cache pointer after release in idcache.c
- Implement a new C++ doubly linked list class.

2003-07-08 Version 1.31 Beta 08Jul03
- Update document for Win32 stuff.
- Ensure VolStatus value for update is permitted.
- Fix cached_path so that it is local to the jcr, otherwise, there
  are problems from job to job.
- Fixed idcache.c which was not thread safe and didn't release memory,
  and didn't always edit the userid correctly.
- Correct missing pool memory allocation in update voluseduration.
- Release mutex in pool_mem.c before triggering ASSERT.
- Lock database while recycling.
- Fix a bug in editing since where I forgot to update to the new size.  
- Implement all the command line update arguments.
- Modify label to use volume=xxx for the new volume and oldvolume=yyy
  if doing a relable.
- Added yes to run command line arguments.
- Clear errno in editing a string to utime.
- In restore print only volumes that will actually be used.
- Fix bextract -- add appropriate breaks in new case code.
- Add a new test -- bsr-opt-test for testing bsr optimization. As usual,
  it pointed out a bug where the directory tree handling code destroyed
  the restore arg list.
- Many updates to the manual.
- Pass prefix links flag to FD.
- Sort list of commands for Console
- Set default FD and SD concurrent jobs to 10.
- Rework the find next volume code in catreq.c to correct some minor
  but subtle logic errors and to eliminate a goto.
- Did spell check on manual.
- Removed bindtextdomain() as it conflicted with RH8.0 headers
- Fixed parse_args to pass address of POOLMEM struct.