@@ -28,7 +28,8 @@
 
  */
 
-#include "list.h"
+#include "alist.h"
+#include "dlist.h"
 #include "bits.h"
 #include "btime.h"
 #include "smartall.h"
